# Promethea_Agent

./: .coverage  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_PROFILE_README.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  PROJECT_OVERVIEW.md  QUICK_START.md  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  SUPPORT.md  config.json  config.py  conversation_core.py  coverage.xml  env.example  example.env  gateway_config.json  gateway_integration.py  package.json  pyproject.toml  quick_start.md  requirements.txt  run_api.py  sessions.json  start_gateway_service.py
.github/: CODEOWNERS  pull_request_template.md
UI/: .eslintrc.cjs  README.md  avatar.js  doctor.js  evolve.js  http.js  i18n.js  index.html  memory-graph.js  metrics.js  package-lock.json  package.json  script.js  settings.js  showcase.js  style.css  tailwind.config.js  vite.config.ts  voice.js
agentkit/: README.md  TOOLS.md  __init__.py
api_server/: README.md  chat_router.py  message_manager.py  metrics.py  requirements.txt  schemas.py  server.py  session_store.py  state.py  user_manager.py
benchmarks/: general_capability_tasks.json
channels/: README.md  __init__.py  adapter_framework.py  adapter_registry.py  base.py  dingtalk_channel.py  feishu_channel.py  registry.py  router.py  web_channel.py  wecom_channel.py
computer/: README.md  __init__.py  base.py  browser.py  filesystem.py  process.py  screen.py
config/: README.md  default.json
core/: README.md  services.py
docs/: ARCHITECTURE.md  CLEANUP_SUMMARY.md  DEMO_PLAN.md  DEMO_SCENARIOS.md  DOCUMENTATION_GAPS.md  GET_STARTED_HERE.md  OUTREACH_COPY.md  PRESENTATION_LAYER_NOTES.md  PROJECT_STATUS.md  README.md  SHOWCASE.md  WHY_PROMETHEA.md  api-reference.md  backlog-full-reconciliation-2026-03-24.md  claude-code-open-source-comparative-deep-dive-2026-04.md  cli-reference.md  configuration.md  deployment.md  extensions.md  full-business-test-playbook.md  full-codebase-audit-2026-03-25.md  full-line-audit-index-2026-03-25.json  full-repo-line-audit-2026-03-25.md  full-stack-audit-2026-03-29.md  full-static-readiness-assessment-2026-03-23.md  full-static-scan-report-2026-03-25.md  infrastructure-profile.md  mvp-report-alignment-2026-03-24.md  official-tools.md  ui-overview.md  (+10 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: main.rs
(+477 files in other folders)
